--- a/package.json
+++ b/package.json
@@ -14,5 +14,18 @@
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
+  },
+  "dependencies": {
+    "bootstrap-fileinput": "^4.4.2",
+    "bootstrap-material-datetimepicker": "^2.7.3",
+    "bootstrap-material-design": "^0.5.10",
+    "dropzone": "^5.1.1",
+    "html2canvas": "^0.5.0-beta4",
+    "jquery-stickit": "^0.2.62",
+    "jquery-ui": "^1.12.1",
+    "jquery.countdown": "^1.2.8",
+    "momentjs": "^2.0.0",
+    "tinymce": "^4.6.4",
+    "tinymce-i18n": "^17.7.8"
   }
 }
