--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "bootstrap-material-datetimepicker": "^2.7.3",
     "bootstrap-material-design": "^0.5.10",
     "dropzone": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^4.7.2",
     "html2canvas": "^0.5.0-beta4",
     "jquery-stickit": "^0.2.62",
     "jquery-ui": "^1.12.1",
     "jquery.countdown": "^1.2.8",
+    "laravel-elixir-copy-fonts": "^0.0.3",
     "momentjs": "^2.0.0",
     "tinymce": "^4.6.4",
     "tinymce-i18n": "^17.7.8"
