--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+APP_NAME=CouponLand
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -30,3 +31,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+INFO_EMAIL=daniilborowkow@gmail.com
