--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": ">=5.6.4",
         "andre_487/php_rutils": "^1.2",
         "barryvdh/laravel-debugbar": "^2.4",
+        "dosarkz/epay-kazcom": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.3.*",
         "nesbot/carbon": "^1.22",
         "tymon/jwt-auth": "^0.5.12",
-        "unisharp/laravel-filemanager": "^1.8"
+        "unisharp/laravel-filemanager": "^1.8",
+        "fintech-fab/qiwi-sdk": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
